[package]
name = "ssh_guardian"
version = "1.1.1"
edition = "2024"
authors = ["flying4x"]
description = "SSH brute-force protection daemon with UFW integration"

[lib]
name = "ssh_guardian"
path = "src/lib.rs"

[[bin]]
name = "ssh_guardian"
path = "src/main.rs"

[[bin]]
name = "sgctl"
path = "src/bin/sgctl.rs"

[dependencies]
# 序列化 / 持久化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 正则表达式
regex = "1"

[target.'cfg(unix)'.dependencies]
# 与系统交互
libc = "0.2"
# 守护进程 / 信号处理
nix = { version = "0.27", features = ["signal", "process"] }

[profile.release]
opt-level = 3
strip = true
